<resources>
    <string name="app_name">EverIt Utility</string>
    <string name="notification_channel_name">All notifications</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login" translatable="false">Login</string>
    <string name="hint_register">Don\'t have an account?</string>
    <string name="goto_signup">Sign Up</string>
    <string name="wrong_login">Wrong email or password</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="goto_login" translatable="false">Login</string>
    <string name="signup">Sign Up</string>
    <string name="hint_login">Already a member?</string>
    <string name="message_404">The required item is not available</string>
    <string name="message_500">The server has been encountered a problem</string>
    <string name="message_401">Access denied</string>
    <string name="message_generic_error">A problem has occurred</string>
    <string name="message_wrong_login">Wrong email or password</string>
    <string name="HERE_APP_ID" translatable="false">zo6HLimKYImFomvOL8Va</string>
    <string name="HERE_APP_CODE" translatable="false">MepmiCAZxo6-hosH67T1IA</string>
    <string name="HERE_LICENSE" translatable="false">K+u3P8VkLYf/6SFsLa5AWoeF/EFt6IrFTF2PCkvLcWFges5XA1l+qBEiAiDlpkrn95PUs3xzWKn9QSJhVw6eD+QL71ZE8WPmjzu82NTva8txP8FCPxUIN7WZqHBljcSi81+M2G7VQYEod3f6cYl4G+oYJwYclUabvoNjQ7gQ+nN3vnJLplYPUOljAhKcLK8R4Cd8KdBPZZzVwWxTtAdOS10RzKtYxlQ2bV5Eic2K53x/bX+QkLBeXeBrLAVEO+0KN73Ne46FBJEyW5R0Mi+ywgV56RAuA7Ab4hURKj7wJWKsyTP/eS5ByQEiXFiAsZZWENmuYf1L24vriQLTwMSw3kFa2pXLPEcFwReHhktTWM+pPwvYWhESpy2SqWRICeVHIyA3WHkPIGcqYYr/2XIvoSbRp8yyJdH+637VIK39HxD2ZwF6z8xPqmmJIS1GFxYmWWOK25YRdFZXvMaM73OegiBorwHDaVwNfB96PwPLA6YIjnvWfanh+YywESaXRDMeiWPfRmEbZ1ukXyf8PnR2E3NXeEGVyu4XYjj6FBGtTdjQQqfwsHbwbXDEaQ21yD4xRbN/GcsqPfBl9Pw4wB0/hcAaHpVb4BbtRNPnV6GW+49FyluVrh18nc/ENV3CzQWtQxTpUtc/VgXGNcqF1/4RDGkuD14mYsQqK9Nl76QCfqA=</string>
    <string name="ok_default">OK</string>
    <string name="cancel_default">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="message_server_unreachable" translatable="false">Service unavailable</string>
    <string name="emailError">Wrong Email !</string>
    <string name="passwordError">Wrong Password !</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="error_password">Wrong password format</string>

    <string name="error_value_long">This value is too long</string>
    <string name="error_value_short">This value is too short</string>
    <string name="error_valueName_long">The "Name" field can have max 50 char</string>
    <string name="error_valueSurname_long">The \"Surname\" field can have max 50 char</string>
    <string name="error_valueShopName_long" translatable="false">The \"Shop Name\" field can have max 50 char</string>
    <string name="error_value_VAT">VAT number length is 11 digits</string>
    <string name="error_value_empty">This field cannot be empty</string>
    <string name="error_value_notValid">This value is not valid</string>
    <string name="error_valueDeliveryCost_max">The delivery cost can have up to 3 digits</string>
    <string name="error_valueMinPrice_max">This value can have up to 3 digits</string>
    <string name="currency_type">€</string>

    <string name="error">Error</string>
    <string name="error_orderNotes_maxChar">Maximum number of characters is 250</string>
    <string name="error_deliveryNotes_maxChar">Maximum number of characters is 250</string>
    <string name="error_valueReview_long">Reviews can be up to 250 characters long</string>

    <string name="error_email">Incorrect email format</string>

    <string name="validation_code_digit_placeholder" translatable="false">0</string>

    <string name="password_regex_hint">Password must have at least:
                                            \n\t-one uppercase letter
                                            \n\t-one lowercase letter
                                            \n\t-one digit
                                            \n\t-one special character
                                            \n\t-min 8 and max 16 characters</string>
</resources>
